feat: initialize project structure and data pipeline setup
- Add DuckDB database configuration to .gitignore
- Create basic project README with setup instructions
- Implement initial data loader script for transfer listings
- Set up basic project structure for DLT and SQLMesh integration

The commit sets up the foundational structure for a data pipeline project
using DuckDB, DLT, and SQLMesh, with sample football transfer data.

--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,19 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+# Add to existing .gitignore
+*.duckdb
+*.duckdb.wal
+database/*
+!database/.gitkeep
+
+# Virtual Environment
+.venv/
+.env/
+venv/
+ENV/
+
+.vscode/
+/database/
+/logs/
