feat: Add soccer data fetching and dynamic data generation
- Integrate soccerdata library to fetch real Premier League player data
- Enhance generate_sample_data() to dynamically fetch current season data
- Add error handling and fallback to sample data if fetching fails
- Update dependencies to include soccerdata package
- Improve type hints and data processing for player information

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "duckdb",
     "dlt[duckdb]>=1.4.1",
     "sqlmesh>=0.38.0",
+    "soccerdata>=1.0.0",
 ]
 
 [project.optional-dependencies]
