--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
     "patito",
     "polars",
     "pyarrow",
-    "sqlmesh>=0.38.0",
+    "sqlmesh[duckdb]>=0.38.0",
     "soccerdata>=1.0.0",
     "pandas-stubs",
     "types-PyYAML",
