feat: Enhance Makefile with derived table display commands
- Add new Makefile targets for displaying derived tables A, B, and C
- Update SQLMesh-related commands to use new display targets
- Remove deprecated transfer analysis display command
- Modify SQLMesh restate and run commands to show derived table results
- Update .PHONY targets to include new display commands

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
     "patito",
     "polars",
     "pyarrow",
-    "sqlmesh[duckdb]>=0.38.0",
+    "sqlmesh>=0.38.0",
     "soccerdata>=1.0.0",
     "pandas-stubs",
     "types-PyYAML",
